--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,3 +13,16 @@ jobs:
         uses: akhilmhdh/contributors-readme-action@v2.3.4
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          # Size of square images in the stack
+          image_size: 100 # optional, default is 100
+          # Number of columns in a row
+          columns_per_row: 6 # optional, default is 6
+          # Type of collaborators options: all/direct/outside
+          collaborators: direct # optional, default is direct
+          # Commit message of the github action
+          commit_message: contrib-readme-action # optional, default is contrib-readme-action has updated readme
+          # Username on commit
+          committer_username: contrib-readme-bot # optional, default is contrib-readme-bot
+          # email id of committer
+          committer_email: contrib-readme-action@noreply.com # optional, default is contrib-readme-action@noreply.com
